[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
rocket = "0.5.0-rc.2"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
