[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
encoding = "0.2.33"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
